--- a/src/main/resources/view/Windows/MainWindow.fxml
+++ b/src/main/resources/view/Windows/MainWindow.fxml
@@ -54,7 +54,7 @@
                          <ListView fx:id="deckList" minHeight="-Infinity" minWidth="-Infinity" prefWidth="180.0" />
                      </content>
                   </ScrollPane>
-                  <Button mnemonicParsing="false" onAction="#showCreateNewDeckForm" text="Add new...">
+                  <Button fx:id="addNewDeckButton" mnemonicParsing="false" onAction="#showCreateNewDeckForm" text="Add new...">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
