--- a/src/main/resources/view/bookings/BookingsPage.fxml
+++ b/src/main/resources/view/bookings/BookingsPage.fxml
@@ -2,9 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -14,96 +12,37 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <GridPane style="-fx-background-color: #50514F;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <GridPane style="-fx-background-color: #50514F;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                  AnchorPane.rightAnchor="0.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="50.0" prefWidth="100.0"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="-Infinity" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="-Infinity" vgrow="SOMETIMES"/>
             </rowConstraints>
-            <children>
-                <Button fx:id="addButton" alignment="CENTER" contentDisplay="CENTER" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handleAddExpenditure" prefHeight="35.0" text="Add Expenditure" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                    <font>
-                        <Font name="Consolas" size="16.0" />
-                    </font>
-                    <GridPane.margin>
-                        <Insets bottom="5.0" top="5.0" />
-                    </GridPane.margin>
-                </Button>
-                <Button alignment="CENTER" contentDisplay="CENTER" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" text="Help" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                    <font>
-                        <Font name="Consolas" size="16.0" />
-                    </font>
-                    <GridPane.margin>
-                        <Insets bottom="5.0" top="5.0" />
-                    </GridPane.margin>
-                </Button>
-                <Button alignment="CENTER" contentDisplay="CENTER" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#handlePreferences" prefHeight="35.0" text="Preferences" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                    <font>
-                        <Font name="Consolas" size="16.0" />
-                    </font>
-                    <GridPane.margin>
-                        <Insets bottom="5.0" top="5.0" />
-                    </GridPane.margin>
-                </Button>
-            </children>
+            <Button fx:id="addButton" alignment="CENTER" contentDisplay="CENTER" minWidth="-Infinity"
+                    mnemonicParsing="false" onMouseClicked="#handleAddBooking" prefHeight="35.0" text="Add Booking"
+                    textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                <font>
+                    <Font name="Consolas" size="16.0"/>
+                </font>
+                <GridPane.margin>
+                    <Insets bottom="5.0" top="5.0"/>
+                </GridPane.margin>
+            </Button>
+            <Button alignment="CENTER" contentDisplay="CENTER" minWidth="-Infinity" mnemonicParsing="false"
+                    prefHeight="35.0" text="Help" textAlignment="CENTER" GridPane.columnIndex="2"
+                    GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                <font>
+                    <Font name="Consolas" size="16.0"/>
+                </font>
+                <GridPane.margin>
+                    <Insets bottom="5.0" top="5.0"/>
+                </GridPane.margin>
+            </Button>
         </GridPane>
-
-        <GridPane gridLinesVisible="true" prefHeight="150.0" prefWidth="945.0" stylesheets="@expenses.css" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="0.0">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="635.4880981445312" minWidth="10.0" prefWidth="613.771484375" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="367.0" minWidth="-Infinity" prefWidth="206.728515625" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-                <GridPane GridPane.columnIndex="1">
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                    <children>
-                        <Label fx:id="totalBudgetLabel" text="\$TotalBudget" GridPane.rowIndex="1">
-                            <GridPane.margin>
-                                <Insets left="10.0" />
-                            </GridPane.margin></Label>
-                        <Label fx:id="totalExpenditureLabel" text="\$TotalExpenditure" GridPane.rowIndex="2">
-                            <GridPane.margin>
-                                <Insets left="10.0" />
-                            </GridPane.margin></Label>
-                        <Label fx:id="budgetLeftLabel" text="\$BudgetLeft" GridPane.rowIndex="3">
-                            <GridPane.margin>
-                                <Insets left="10.0" />
-                            </GridPane.margin></Label>
-                        <ToggleButton fx:id="viewOptionButton" mnemonicParsing="false" onMouseClicked="#handleToggle" style="-fx-border-radius: 0px;" text="\$viewOption" GridPane.rowIndex="4">
-                            <GridPane.margin>
-                                <Insets left="10.0" top="25.0" />
-                            </GridPane.margin></ToggleButton>
-                    </children>
-                    <padding>
-                        <Insets left="20.0" />
-                    </padding>
-                    <GridPane.margin>
-                        <Insets />
-                    </GridPane.margin>
-                </GridPane>
-                <ScrollPane fx:id="bookingsContainer" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hvalue="1.0" prefHeight="150.0" vvalue="1.0" AnchorPane.bottomAnchor="41.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0">
-                    <GridPane.margin>
-                        <Insets />
-                    </GridPane.margin></ScrollPane>
-            </children>
-        </GridPane>
-        <VBox fx:id="sideBarLeft" stylesheets="@expenses.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-        <VBox fx:id="sideBarRight" stylesheets="@expenses.css" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+        <ScrollPane fx:id="bookingsContainer" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" hvalue="1.0" layoutX="150.0" prefHeight="150.0" prefWidth="640.0" vvalue="1.0" AnchorPane.bottomAnchor="41.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0" />
     </children>
 </AnchorPane>
