--- a/src/main/resources/view/trips/EditTripPage.fxml
+++ b/src/main/resources/view/trips/EditTripPage.fxml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane stylesheets="@Trips.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <ScrollPane fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <content>
-               <VBox fx:id="formItemsPlaceholder" alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" style="-fx-background-color: #F2E8E3;" styleClass="EditTripForm">
+               <VBox fx:id="formItemsPlaceholder" alignment="TOP_CENTER" maxWidth="1.7976931348623157E308" minHeight="-Infinity" style="-fx-background-color: #F2E8E3;" styleClass="EditTripForm">
             <children>
                <Label alignment="CENTER" contentDisplay="TEXT_ONLY" graphicTextGap="0.0" maxWidth="1.7976931348623157E308" style="-fx-border-color: rgba(202, 202, 202, 200); -fx-border-width: 0 0 1 0; -fx-text-fill: black; -fx-font-size: 25;" text="Trip Details" textAlignment="CENTER">
                   <font>
