--- a/src/main/resources/view/Piechart.css
+++ b/src/main/resources/view/Piechart.css
@@ -10,13 +10,13 @@
 }
 
 .chart-title {
-  -fx-text-fill: #ffffff;
+  -fx-text-fill: #000000;
   -fx-font-size: 18px;
   -fx-padding: -50px;
 }
 
 .chart-pie-label {
-    -fx-fill: #ffffff;
+    -fx-fill: #000000;
     -fx-font-size: 1em;
 }
 
