--- a/docs/stylesheets/gh-pages.css
+++ b/docs/stylesheets/gh-pages.css
@@ -211,4 +211,9 @@ table.tableblock > .title,
     #site-header {
         display: none;
     }
+
+    a[href]:after {
+        content: none !important;
+    }
 }
+
