--- a/src/main/resources/view/NotesListCard.fxml
+++ b/src/main/resources/view/NotesListCard.fxml
@@ -16,9 +16,9 @@
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
         </columnConstraints>
-      <HBox prefHeight="100.0" prefWidth="200.0">
+      <HBox prefHeight="100.0">
          <children>
-              <VBox alignment="CENTER_LEFT" minHeight="105" prefWidth="248.0">
+              <VBox alignment="CENTER_LEFT" minHeight="105">
                   <padding>
                       <Insets bottom="5" left="15" right="5" top="5" />
                   </padding>
