Update DG, PPP, and fix appt-edit errors

--- a/src/main/resources/view/AppointmentListCard.fxml
+++ b/src/main/resources/view/AppointmentListCard.fxml
@@ -31,6 +31,7 @@
             <Label fx:id="patientPhone" styleClass="cell_small_label" text="\$phone" />
             <Label fx:id="patientEmail" styleClass="cell_small_label" text="\$email" />
             <Label fx:id="patientAddress" styleClass="cell_small_label" text="\$address" />
+            <FlowPane fx:id="description" styleClass="cell_small_label" />
             <TextFlow fx:id="startDateTime" styleClass="cell_small_label" />
             <TextFlow fx:id="endDateTime" styleClass="cell_small_label" />
             <FlowPane fx:id="frequency" styleClass="cell_small_label" />
